--- a/app/views/links/index.erb
+++ b/app/views/links/index.erb
@@ -3,7 +3,7 @@
   <% @links.each do |link| %>
     <li>
     Title: <%= link.title %>
-    URL:   <%= link.url   %>
+    URL:  <a href="<%= link.url %>">
   </li>
 <% end %>
 </ul>
