removing link code in html

--- a/app/views/links/index.erb
+++ b/app/views/links/index.erb
@@ -2,8 +2,8 @@
 <ul id='links'>
   <% @links.each do |link| %>
     <li>
-    Title: <%= link.title %>
-    URL:  <a href="<%= link.url %>">
+    Title:  <%= link.title %>
+    URL:    <%= link.url %>
   </li>
 <% end %>
 </ul>
