--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -5,26 +5,8 @@
     <title>Bookmark Manager</title>
   </head>
   <body>
-    <% if current_user %>
-      Welcome <%= current_user.email %>
-      <form action="/sessions" method='post'>
-        <input type="submit" value='Sign out'>
-        <input type="hidden" name='_method' value='delete'>
-      </form>
-    <% end %>
-    <% if flash[:notice] %>
-      <div id='notice'>
-        <%= flash[:notice] %>
-      </div>
-    <% end %>
-    <% if flash[:errors] && !flash[:errors].empty? %>
-      Please refer to the following errors below:
-      <ul id='errors'>
-        <% flash[:errors].each do |error| %>
-          <li><%= error %></li>
-        <% end %>
-      </ul>
-    <% end %>
+    <%= partial :welcome%>
+    <%= partial :flash%>
     <%= yield %>
   </body>
 </html>
